--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ button {
   height: 32px;
   color: rgb(255, 255, 255);
   font-weight: 500;
+  border-radius: 5px;
 }
 .container{
   margin: 0 auto;
